Fixed Asset Folder

--- a/app/src/scss/_misc.scss
+++ b/app/src/scss/_misc.scss
@@ -1,17 +1,17 @@
 .doodle-bg-1 {
-    background-image: url("../../assets//images/doodle-background.png");
+    background-image: url("../assets//images/doodle-background.png");
     background-size: 50%;
     background-blend-mode: overlay;
 }
 
 .doodle-bg-2 {
-    background-image: url("../../assets//images/doodle-background-2.png");
+    background-image: url("../assets//images/doodle-background-2.png");
     background-size: 50%;
     background-blend-mode: overlay;
 }
 
 .bg-1 {
-    background-image: url("../../assets/images/background.png");
+    background-image: url("../assets/images/background.png");
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
