--- a/app/src/templates/sections/hero.section.njk
+++ b/app/src/templates/sections/hero.section.njk
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col-md-6 order-1 order-md-2">
-            <img src="../assets/images/product.png" alt="Hover Board" class="hero-image img-fluid">
+            <img src="assets/images/product.png" alt="Hover Board" class="hero-image img-fluid">
         </div>
     </div>
 
