--- a/app/src/scss/_forms.scss
+++ b/app/src/scss/_forms.scss
@@ -1,6 +1,11 @@
-.form-group .form-control {
+form .form-control {
     border: 1px solid $border-color;
     &::placeholder {
         color: $input-color-placeholder;
+    }
+
+    &:focus {
+        border-color: $input-border-focus;
+        box-shadow: 0 0 0 0.2rem transparentize($input-border-focus, 0.9);
     }
 }
