--- a/app/src/templates/partials/navbar.partial.njk
+++ b/app/src/templates/partials/navbar.partial.njk
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light navbar-expand-md bg-transparent">
+<nav class="navbar navbar-light navbar-expand-md bg-transparent" id="navbar">
     <span class="navbar-brand mb-0 h1">
         <strong class="text-primary">U</strong>Board
     </span>
@@ -11,7 +11,7 @@
             <a class="nav-item nav-link" href="#Gallery">Gallery</a>
             <a class="nav-item nav-link" href="#Achievers">Achievers</a>
             <a class="nav-item nav-link" href="#Contact" tabindex="-1" aria-disabled="true">Contact</a>
-            <a class="nav-item nav-link ml-5" href="#Login" tabindex="-1" aria-disabled="true">Login <i class="fa fa-sign-in-alt"></i></a>
+            <a class="nav-item btn btn-link ml-5" tabindex="-1" aria-disabled="true">Login <i class="fa fa-sign-in-alt"></i></a>
         </div>
     </div>
 </nav>
