--- a/app/src/templates/sections/company.section.njk
+++ b/app/src/templates/sections/company.section.njk
@@ -13,7 +13,7 @@
 
     {% for feature in content.company.features %}
         <div class="feature f-{{feature.id}} col-md-4">
-            <div class="card border-light">
+            <div class="card border-light wow flipInY" data-wow-delay="{{feature.id*100}}ms">
                 <div class="card-body">
                     <div class="feature-icon"><i class="fa {{feature.icon}}"></i></div>
                     <h4 class="feature-title">{{feature.title}}</h4>
