--- a/app/src/templates/sections/contact.section.njk
+++ b/app/src/templates/sections/contact.section.njk
@@ -23,5 +23,12 @@
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <textarea name="message" id="contactMessage" rows="8" class="form-control" placeholder="Your Message..."></textarea>
+        </div>
+
+        <div class="text-center">
+            <button class="btn btn-primary text-uppercase font-weight-bold px-5 mt-2">Submit</button>
+        </div>
     </form>
 </div>
