--- a/app/src/templates/sections/hero.section.njk
+++ b/app/src/templates/sections/hero.section.njk
@@ -2,7 +2,7 @@
 
     <div class="row my-auto text-center text-md-left">
 
-        <div class="col-md-6 order-2 order-md-1">
+        <div class="col-md-6 order-2 order-md-1 wow fadeInLeft">
 
             <h1 class="hero-title display-4">
                 {{content.hero.title | safe}}
@@ -12,7 +12,7 @@
             </p>
 
             <a href=" {{content.hero.action.link}} " class="btn btn-lg btn-primary mt-4">
-                <i class="fa {{content.hero.action.icon}} "></i> <span class="text-uppercase font-weight-medium ml-2">{{content.hero.action.text}}</span>
+                <i class="fa {{content.hero.action.icon}} "></i> <span class="text-uppercase font-weight-bold ml-2">{{content.hero.action.text}}</span>
             </a>
         </div>
 
