--- a/app/src/templates/sections/contact.section.njk
+++ b/app/src/templates/sections/contact.section.njk
@@ -1,9 +1,9 @@
 <div class="container">
-    <div class="text-center">
+    <div class="text-center" uk-parallax="opacity:0,1; y:120,0;viewport:0.3">
         <h2 class="section-title">Contact</h2>
         <div class="section-title-underline"></div>
     </div>
-    <form action="#" class="contact-form mt-5">
+    <form action="#" class="contact-form mt-5" data-aos="fade-up">
         <div class="row">
             <div class="col-md-4">
                 <div class="form-group">
@@ -28,7 +28,7 @@
         </div>
 
         <div class="text-center">
-            <button class="btn btn-primary text-uppercase font-weight-bold px-5 mt-2">Submit</button>
+            <button class="btn btn-primary text-uppercase font-weight-bold px-5 mt-2" data-aos="fade-down">Submit</button>
         </div>
     </form>
 </div>
