--- a/app/src/pages/index.njk
+++ b/app/src/pages/index.njk
@@ -2,8 +2,10 @@
 
 {% block content %}
 
-    <div class="container vh-100 d-flex flex-column" id="Hero">
+    <div class="container-fluid d-flex flex-column" id="Hero">
         {% include "partials/navbar.partial.njk" %}
+
+        {% include "partials/login.partial.njk" %}
 
         {% include "sections/hero.section.njk" %}
     </div>
@@ -32,11 +34,11 @@
 
     <div class="copyright container-fluid p-4">
         <div class="row justify-content-space-between align-items-center">
-            <div class="col text-left">
-                Copyright &copy; 2019 <a href="{{app.details.companyUrl}}">{{app.details.company}}</a>. All rights reserved
+            <div class="col-md-4 text-center order-3 order-md-1 text-md-left" data-aos="flip-up" data-aos-offset="0">
+                Copyright &copy; 2019 <a href="{{app.details.companyUrl}}">{{app.details.company}}</a>. <wbr> All rights reserved
             </div>
-            <div class="col text-center">
-                <a href="{{app.social.facebook}}" class="social-link">
+            <div class="col-md-4 order-1 order-md-2 text-center pb-4 pb-md-0" data-aos="flip-up" data-aos-offset="0">
+                <a href="{{app.social.facebook}}" class="social-link" >
                     <i class="fab fa-facebook"></i>
                 </a>
                 <a href="{{app.social.twitter}}" class="social-link">
@@ -46,7 +48,7 @@
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
-            <div class="col text-right">
+            <div class="col-md-4 order-2 order-md-3 text-center text-md-right" data-aos="flip-up" data-aos-offset="0">
                 Hand-crafted &amp; made with <i class="fa fa-heart text-danger"></i>
             </div>
         </div>
