--- a/app/src/templates/partials/navbar.partial.njk
+++ b/app/src/templates/partials/navbar.partial.njk
@@ -1,17 +1,19 @@
 <nav class="navbar navbar-light navbar-expand-md bg-transparent" id="navbar">
-    <span class="navbar-brand mb-0 h1">
-        <strong class="text-primary">U</strong>Board
-    </span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#Company">Company</a>
-            <a class="nav-item nav-link" href="#Gallery">Gallery</a>
-            <a class="nav-item nav-link" href="#Achievers">Achievers</a>
-            <a class="nav-item nav-link" href="#Contact" tabindex="-1" aria-disabled="true">Contact</a>
-            <a class="nav-item btn btn-link ml-5" tabindex="-1" aria-disabled="true">Login <i class="fa fa-sign-in-alt"></i></a>
+    <div class="container">
+        <span class="navbar-brand mb-0 h1">
+            <strong class="text-primary">Hover</strong>Board
+        </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" href="#Company">Company</a>
+                <a class="nav-item nav-link" href="#Gallery">Gallery</a>
+                <a class="nav-item nav-link" href="#Achievers">Achievers</a>
+                <a class="nav-item nav-link" href="#Contact">Contact</a>
+                <a  class="nav-item btn btn-link ml-5" uk-toggle="target: #login-modal">Login <i class="fa fa-sign-in-alt"></i></a>
+            </div>
         </div>
     </div>
 </nav>
