--- a/app/src/templates/sections/gallery.section.njk
+++ b/app/src/templates/sections/gallery.section.njk
@@ -1,14 +1,14 @@
 <div class="container">
-    <div class="text-center">
+    <div class="text-center" uk-parallax="opacity:0,1; y:120,0;viewport:0.3">
         <h2 class="section-title inverse">Gallery</h2>
         <div class="section-title-underline inverse"></div>
     </div>
 
-    <div class="gallery-container my-5">
+    <div class="gallery-container my-5" uk-lightbox="animation: fade">
         {% for image in content.gallery.images %}
-            <div class="item">
-                <img src="{{image.src}}" alt="{{image.alt}}" class="gallery-image" title="{{image.id}}">
-            </div>
+            <a href="{{image.src}}" data-caption="{{image.caption}}" class="item" uk-lightbox="animation: fade" data-aos="{% if image.id%4 == 0 %}fade-up{% elif image.id%4 == 1  %}fade-left{% elif image.id%4 == 2  %}fade-down{% else %}fade-right{% endif %}" data-aos-delay="{{image.id*20}}">
+                <img src="{{image.src}}" alt="{{image.alt}}" class="gallery-image" title="{{image.caption}}">
+            </a>
         {% endfor %}
     </div>
 </div>
