--- a/app/src/templates/sections/hero.section.njk
+++ b/app/src/templates/sections/hero.section.njk
@@ -2,7 +2,7 @@
 
     <div class="row my-auto text-center text-md-left">
 
-        <div class="col-md-6 order-2 order-md-1 wow fadeInRight" uk-parallax="scale:1,0.7; opacity: 1, 0.3">
+        <div class="col-md-6 order-2 order-md-1" uk-parallax="scale:1,0.7; opacity: 1, 0.3" data-aos="fade-right">
 
             <h1 class="hero-title display-4">
                 {{content.hero.title | safe}}
