--- a/app/src/templates/sections/achievers.section.njk
+++ b/app/src/templates/sections/achievers.section.njk
@@ -15,7 +15,7 @@
             </div>
         {% endfor %}
     </div>
-    <div class="text-right p-5">
+    <div class="text-center text-md-right p-5">
         <a href="#" class="btn btn-primary font-weight-bold" data-aos="fade-right">
             View More <i class="fa fa-angle-double-right"></i>
         </a>
