--- a/app/src/pages/index.njk
+++ b/app/src/pages/index.njk
@@ -15,6 +15,12 @@
         {% include "sections/company.section.njk" %}
         
     </div>
+    
+    <div class="container-fluid p-0" id="Product">
+
+        {% include "sections/product.section.njk" %}
+        
+    </div>
 
     <div class="section-gallery container-fluid py-5" id="Gallery">
         {% include "sections/gallery.section.njk" %}
