--- a/app/src/scss/_misc.scss
+++ b/app/src/scss/_misc.scss
@@ -1,5 +1,7 @@
 body {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    width: 100vw;
 
     &.navbar-fixed {
         
@@ -267,6 +269,34 @@ body {
                 color: color(gray-light);
             }
 
+        }
+    }
+}
+
+#Product {
+
+    background: #fff;
+
+    .product-nav {
+        
+        li {
+            @media screen and (min-width: map-get($grid-breakpoints, md)) {
+                a {
+                    width: 100%;
+                    height: 200px;
+                    overflow: hidden;
+                    border-radius: 4px;
+                    transform: scale(0.8, 0.8)
+                }
+
+            }
+
+            &.uk-active {
+                a {
+                    transform: scale(1, 1);
+                    box-shadow: 0px 0px 0px 5px transparentize(theme-color(primary), 0.5);
+                }
+            }
         }
     }
 }
