--- a/app/src/templates/sections/product.section.njk
+++ b/app/src/templates/sections/product.section.njk
@@ -1,10 +1,15 @@
-<div class="container-fluid">
+<div class="container-fluid" data-aos="fade-up">
     <div class="row">
         <div class="col-md-4 mb-2 mb-md-0 p-5 bg-dark">
-            <ul class="uk-thumbnav product-nav" uk-switcher="connect:#product-description">
+            <ul class="uk-thumbnav product-nav" uk-switcher="connect:#product-description; animation: uk-animation-fade">
                 {% for product in content.product.products %}
                     <li class="uk-width-1-3 uk-width-1-1@m">
-                        <a href="#"><img src="{{product.image}}" uk-cover></a>
+                        <a href="#" class="uk-inline">
+                            <img src="{{product.image}}" >
+                            <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-padding-small text-center">
+                                <p class="font-weight-medium">{{product.name}}</p>
+                            </div>
+                        </a>
                     </li>
                 {% endfor %}
             </ul>
