--- a/app/src/templates/sections/product.section.njk
+++ b/app/src/templates/sections/product.section.njk
@@ -22,7 +22,7 @@
                         <div class="card product-desc-card border-0">
                             <div class="card-body">
                                 <h5 class="card-title">{{product.name}}</h4>
-                                <h6 class="card-subtitle text-muted">Parameters</h5>
+                                <h6 class="card-subtitle text-muted">Description</h5>
                                 <hr>
                                 <div class="uk-overflow-auto">
                                     <table class="uk-table uk-table-small">
