--- a/app/src/scss/_misc.scss
+++ b/app/src/scss/_misc.scss
@@ -1,7 +1,7 @@
 body {
     scroll-behavior: smooth;
     overflow-x: hidden;
-    width: 100vw;
+    min-width: 100%;
 
     &.navbar-fixed {
         
@@ -277,19 +277,27 @@ body {
 
     background: #fff;
 
+    .product-table {
+        td {
+            padding: 5px 12px;
+        }
+    }
+
     .product-nav {
         
         li {
             a {
-                border-radius: 4px;
+                border-radius: 2px;
                 transform: scale(0.9, 0.9);
+                // border: 3px solid transparentize($white, 0.9);
             }
             @media screen and (min-width: map-get($grid-breakpoints, md)) {
                 
                 a {
                     width: 100%;
-                    height: 200px;
+                    height: 230px;
                     overflow: hidden;
+                    // border-width: 8px;
 
                     img {
                         height: 100%;
@@ -302,6 +310,7 @@ body {
             }
 
             &.uk-active {
+                background: #fff;
                 a {
                     transform: scale(1, 1);
                     // box-shadow: 0px 0px 0px 5px transparentize(theme-color(primary), 0.5);
