--- a/app/src/templates/sections/product.section.njk
+++ b/app/src/templates/sections/product.section.njk
@@ -1,9 +1,9 @@
 <div class="container-fluid" data-aos="fade-up">
     <div class="row">
-        <div class="col-md-4 mb-2 mb-md-0 p-5 bg-dark">
+        <div class="product-nav-container col-md-4 mb-2 mb-md-0 bg-dark p-0">
             <ul class="uk-thumbnav product-nav" uk-switcher="connect:#product-description; animation: uk-animation-fade">
                 {% for product in content.product.products %}
-                    <li class="uk-width-1-3 uk-width-1-1@m">
+                    <li class="uk-width-1-3 uk-width-1-1@m p-4 {% if loop.index == 0 %} pt-5 {% endif %}">
                         <a href="#" class="uk-inline">
                             <img src="{{product.image}}" >
                             <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-padding-small text-center">
@@ -15,7 +15,7 @@
             </ul>
         </div>
 
-        <div class="col-md-8 p-5">
+        <div class="col-md-8 py-2 px-1 px-md-4 ">
             <ul class="uk-switcher" id="product-description">
                 {% for product in content.product.products %}
                     <li>
@@ -25,7 +25,7 @@
                                 <h6 class="card-subtitle text-muted">Description</h5>
                                 <hr>
                                 <div class="uk-overflow-auto">
-                                    <table class="uk-table uk-table-small">
+                                    <table class="product-table uk-table uk-table-small">
 
                                         <tbody>
                                             {% for prop, value in product.details %}
