--- a/app/src/scss/_misc.scss
+++ b/app/src/scss/_misc.scss
@@ -275,6 +275,10 @@ body {
 
 #Product {
 
+    .product-nav-container {
+        box-shadow: inset -4px 0px 6px #000;
+    }
+
     background: #fff;
 
     .product-table {
@@ -284,10 +288,16 @@ body {
     }
 
     .product-nav {
+
+        $b-rad: 2px;
         
         li {
+            position: relative;
+            border-top-left-radius: $b-rad;
+            border-bottom-left-radius: $b-rad;            
+
             a {
-                border-radius: 2px;
+                border-radius: $border-radius;
                 transform: scale(0.9, 0.9);
                 // border: 3px solid transparentize($white, 0.9);
             }
@@ -311,6 +321,32 @@ body {
 
             &.uk-active {
                 background: #fff;
+                box-shadow: -4px 4px 4px #000;
+
+                &::after, &::before {
+                    content: '';
+                    display: block;
+                    background: transparent;
+                    width: $b-rad;
+                    height: $b-rad;
+                    position: absolute;
+                    right: 0;
+                }
+
+                &::after {
+                    border-bottom-right-radius: $b-rad;
+                    top: -$b-rad;
+
+                    box-shadow: $b-rad $b-rad 0px $b-rad #fff;
+                }
+
+                &::before {
+                    border-top-right-radius: $b-rad;
+                    bottom: -$b-rad;
+
+                    box-shadow: $b-rad (-$b-rad) 0px $b-rad #fff;
+                }
+
                 a {
                     transform: scale(1, 1);
                     // box-shadow: 0px 0px 0px 5px transparentize(theme-color(primary), 0.5);
