--- a/app/src/templates/sections/product.section.njk
+++ b/app/src/templates/sections/product.section.njk
@@ -1,6 +1,6 @@
 <div class="container-fluid" data-aos="fade-up">
     <div class="row">
-        <div class="product-nav-container col-md-4 mb-2 mb-md-0 bg-dark p-0">
+        <div class="product-nav-container col-md-4 mb-2 mb-md-0 bg-dark py-5 pl-5 pr-0">
             <ul class="uk-thumbnav product-nav" uk-switcher="connect:#product-description; animation: uk-animation-fade">
                 {% for product in content.product.products %}
                     <li class="uk-width-1-3 uk-width-1-1@m p-4 {% if loop.index == 0 %} pt-5 {% endif %}">
@@ -15,7 +15,7 @@
             </ul>
         </div>
 
-        <div class="col-md-8 py-2 px-1 px-md-4 ">
+        <div class="col-md-8 py-2 px-1 p-md-4">
             <ul class="uk-switcher" id="product-description">
                 {% for product in content.product.products %}
                     <li>
