--- a/app/src/pages/index.njk
+++ b/app/src/pages/index.njk
@@ -15,6 +15,10 @@
         {% include "sections/company.section.njk" %}
         
     </div>
+
+    <div class="container-fluid py-5" id="Quotes">
+        {% include "sections/quotes.section.njk" %}
+    </div>
     
     <div class="container-fluid p-0" id="Product">
 
