Removed text slider

--- a/app/src/templates/sections/hero.section.njk
+++ b/app/src/templates/sections/hero.section.njk
@@ -8,7 +8,7 @@
                 {{content.hero.title | safe}}
             </h1>
             <p class="font-weight-medium text-muted mt-4">
-                {{content.hero.text}}
+                {{content.hero.text | safe}}
             </p>
 
             <a href=" {{content.hero.action.link}} " class="btn btn-lg btn-primary mt-4">
