--- a/app/src/templates/sections/company.section.njk
+++ b/app/src/templates/sections/company.section.njk
@@ -16,6 +16,7 @@
         <div class="col-md-8 text-">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptate deleniti sed animi.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus praesentium omnis cum repellat animi non at similique libero itaque cumque.</p>
+            <p>LinkLine also owns TripBikes, Bangalore's best bike renter.</p>
         </div>
         
     </div>
