Fixed mobile problem

--- a/app/src/scss/_misc.scss
+++ b/app/src/scss/_misc.scss
@@ -276,7 +276,14 @@ body {
 #Product {
 
     .product-nav-container {
-        box-shadow: inset -4px 0px 4px #000;
+        padding: 3rem 3rem 0 3rem;
+        box-shadow: inset 0px -4px 4px #000;
+
+        @media screen and (min-width: map-get($grid-breakpoints, md)) {
+
+            padding: 3rem 0 3rem 3rem;
+            box-shadow: inset -4px 0px 4px #000;
+        }
     }
 
     background: #fff;
@@ -289,19 +296,49 @@ body {
 
     .product-nav {
 
-        $b-rad: 2px;
+        $b-rad: $border-radius;
         
         li {
-            position: relative;
-            border-top-left-radius: $b-rad;
-            border-bottom-left-radius: $b-rad;            
+            border-radius: $b-rad $b-rad 0 0;
+            z-index: 10;      
+            transform: translateY(1px); //line fix
 
             a {
                 border-radius: $border-radius;
                 transform: scale(0.9, 0.9);
                 // border: 3px solid transparentize($white, 0.9);
             }
+
+            .uk-overlay {
+                display: none;
+            }
+
+            &.uk-active {
+                background: #fff;
+                box-shadow: -4px -4px 4px #000;
+
+                &::after, &::before {
+                    content: '';
+                    display: none;
+                }
+
+                a {
+                    transform: scale(1, 1);
+                    // box-shadow: 0px 0px 0px 5px transparentize(theme-color(primary), 0.5);
+                }
+
+            }
+
+            
             @media screen and (min-width: map-get($grid-breakpoints, md)) {
+
+                border-radius: $b-rad 0 0 $b-rad;
+                position: relative;
+                transform: none;
+
+                .uk-overlay {
+                    display: initial;
+                }
                 
                 a {
                     width: 100%;
@@ -317,45 +354,43 @@ body {
                     }
                 }
 
+                &.uk-active {
+
+                    box-shadow: -4px 4px 4px #000;
+
+                    &::after, &::before {
+                        content: '';
+                        display: block;
+                        background: transparent;
+                        width: $b-rad;
+                        height: $b-rad;
+                        position: absolute;
+                        right: 0;
+                    }
+    
+                    &::after {
+                        border-bottom-right-radius: $b-rad;
+                        top: -$b-rad;
+                        left: auto;
+    
+                        box-shadow: $b-rad $b-rad 0px $b-rad #fff;
+                    }
+    
+                    &::before {
+                        border-top-right-radius: $b-rad;
+                        bottom: -$b-rad;
+    
+                        box-shadow: $b-rad (-$b-rad) 0px $b-rad #fff;
+                    }
+
+                    .uk-overlay {
+                        opacity: 0; 
+                    }
+                    
+                }
+
             }
 
-            &.uk-active {
-                background: #fff;
-                box-shadow: -4px 4px 4px #000;
-
-                &::after, &::before {
-                    content: '';
-                    display: block;
-                    background: transparent;
-                    width: $b-rad;
-                    height: $b-rad;
-                    position: absolute;
-                    right: 0;
-                }
-
-                &::after {
-                    border-bottom-right-radius: $b-rad;
-                    top: -$b-rad;
-
-                    box-shadow: $b-rad $b-rad 0px $b-rad #fff;
-                }
-
-                &::before {
-                    border-top-right-radius: $b-rad;
-                    bottom: -$b-rad;
-
-                    box-shadow: $b-rad (-$b-rad) 0px $b-rad #fff;
-                }
-
-                a {
-                    transform: scale(1, 1);
-                    // box-shadow: 0px 0px 0px 5px transparentize(theme-color(primary), 0.5);
-                }
-
-                .uk-overlay {
-                    opacity: 0; 
-                }
-            }
         }
     }
 }
