--- a/app/src/templates/sections/gallery.section.njk
+++ b/app/src/templates/sections/gallery.section.njk
@@ -13,11 +13,13 @@
         {% endfor %}
     </div>
 
-    <div class="text-center">
-        <button tab-index="-1" id="gallery-load-more" class="btn btn-primary bg-transparent px-5 btn-lg border-0"  uk-tooltip="Load More">
-            <i class="fa fa-angle-down"></i>
-        </button>
-    </div>
+    {% if content.gallery.images.length > 10 %}
+        <div class="text-center">
+            <button tab-index="-1" id="gallery-load-more" class="btn btn-primary bg-transparent px-5 btn-lg border-0"  uk-tooltip="Load More">
+                <i class="fa fa-angle-down"></i>
+            </button>
+        </div>
+    {% endif %}
 
     {# <div uk-slider="finite:true">
 
