--- a/app/src/templates/sections/gallery.section.njk
+++ b/app/src/templates/sections/gallery.section.njk
@@ -8,7 +8,7 @@
     {# {% if image.id%4 == 0 %}fade-up{% elif image.id%4 == 1  %}fade-left{% elif image.id%4 == 2  %}fade-down{% else %}fade-right{% endif %} #}
         {% for image in content.gallery.images %}
             <a href="{{image.src}}" data-caption="{{image.caption}}" class="gallery-item">
-                <img data-src="{{image.src}}" alt="{{image.alt}}" class="gallery-image" title="{{image.caption}}" uk-img>
+                <img src="{{image.src}}" alt="{{image.alt}}" class="gallery-image" title="{{image.caption}}">
             </a>
         {% endfor %}
     </div>
