--- a/app/src/templates/partials/navbar.partial.njk
+++ b/app/src/templates/partials/navbar.partial.njk
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light navbar-expand-md bg-transparent" id="navbar">
     <div class="container">
         <span class="navbar-brand mb-0 h1">
-            <strong class="text-primary">Hover</strong>Board
+            <strong class="text-primary">Trip</strong>Board
         </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
