--- a/app/src/pages/index.njk
+++ b/app/src/pages/index.njk
@@ -20,7 +20,7 @@
         {% include "sections/quotes.section.njk" %}
     </div> #}
     
-    <div class="container-fluid p-0" id="Product">
+    <div class="container-fluid p-0" id="Product" data-aos="fade-up">
 
         {% include "sections/product.section.njk" %}
         
