--- a/app/src/scss/_misc.scss
+++ b/app/src/scss/_misc.scss
@@ -54,12 +54,13 @@ body {
         display: block;
 
         .navbar-collapse {
-            background: #fff;
+            background: theme-color(primary);
             border-radius: $border-radius;
             margin-top: 2rem;
 
             .navbar-nav .nav-item {
                 padding: 1rem;
+                color: #fff;
             }
         }
     }
