--- a/app/src/templates/sections/company.section.njk
+++ b/app/src/templates/sections/company.section.njk
@@ -8,15 +8,15 @@
         {{content.company.text}}
     </p>
 
-    <div class="row align-items-center border-top border-bottom">
+    <div class="row align-items-center p-4 border-top border-bottom">
 
         <div class="col-md-3">
             <img src="assets/images/linkline.png" alt="LinkLine" class="img-fluid">
         </div>
-        <div class="col-md-8 text-">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptate deleniti sed animi.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus praesentium omnis cum repellat animi non at similique libero itaque cumque.</p>
-            <p>LinkLine also owns TripBikes, Bangalore's best bike renter.</p>
+        <div class="col-md-8 text-justify">
+            <p>LinkLine e-Commerce Pvt Ltd is an established brand in the bike & hoverboard booking business with a presence across South India.</p>
+            <p>Winner of top awards and achievements from both Royal Enfield and KTM, we have been instrumented in providing hundreds of bookings to these brands in a short period of time</p>
+            <p>We are now exited to launch Trip Boards, and we aim to be the single largest vendor of hoverboards in India.</p>
         </div>
         
     </div>
