--- a/app/src/templates/sections/product.section.njk
+++ b/app/src/templates/sections/product.section.njk
@@ -1,4 +1,4 @@
-<div class="container-fluid" data-aos="fade-up">
+<div class="container-fluid">
     <div class="row">
         <div class="product-nav-container col-md-4 mb-2 mb-md-0 bg-dark">
             <ul class="uk-thumbnav product-nav" uk-switcher="connect:#product-description; animation: uk-animation-fade">
