Added Logo. Changed color scheme to blue

--- a/app/src/scss/_variables.scss
+++ b/app/src/scss/_variables.scss
@@ -14,8 +14,8 @@ $white: #ffffff;
 $white-smoke: #f4f4f4;
 $ghost-white: #f7fafc;
 $violet: #41478a;
-$brand-primary: #E5334E;
-$theme-colors: ( primary: #E5334E, secondary: #FFCCD8, success: #8BC34A, info: #00BCD4, warning: #ffaf00, danger: #e65251, light: #f3f5f6, dark: #333333);
+$brand-primary: #3680c3;
+$theme-colors: ( primary: $brand-primary, secondary: #FFCCD8, success: #8BC34A, info: #00BCD4, warning: #ffaf00, danger: #e65251, light: #f3f5f6, dark: #333333);
 $colors: ( blue: $blue, indigo: $indigo, purple: $purple, pink: $pink, red: $red, orange: $orange, yellow: $yellow, green: $green, teal: $teal, cyan: $cyan, white: $white, white-smoke: #f3f5f6, gray: #666666, gray-light: #999999, gray-lightest: #F9F9F9, gray-dark: #292b2c);
 
 //////// THEME FONTS ////////
