--- a/app/src/templates/sections/hero.section.njk
+++ b/app/src/templates/sections/hero.section.njk
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col-md-6 order-1 order-md-2" uk-parallax="x:0, 150">
-            <img src="assets/images/product.png" alt="Hover Board" class="hero-image img-fluid wow fadeInLeft">
+            <img src="assets/images/product-blue.png" alt="Hover Board" class="hero-image img-fluid wow fadeInLeft">
         </div>
     </div>
 
