--- a/app/src/templates/layouts/app.layout.njk
+++ b/app/src/templates/layouts/app.layout.njk
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">   
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="{{app.logo}}" type="image/x-icon">
 </head>
 <body class="doodle-bg-2" data-spy="scroll" data-target="#navbar" data-offset=0>
 
